# ElfFlux

./: CMakeLists.txt  README.md  build_web.sh
RayTal/RayTal/: Main.cpp
assets/: main.cs  main.elf  script_stub.cs  script_stub.elf
assets/include/: CameraFree.cs  Inspector.elf  LiteUnit.cs  ModelLoader.cs  ModelLoader.elf  Sun.cs  TextureAtlas.elf  WaterPlane.cs
assets/models/kenney_animated-characters-retro/: License.txt  character.glb  characterMedium.gltf
assets/models/kenney_blocky_characters/glb/: README_ELFFLUX.md  character-a.glb  character-b.glb  character-c.glb  character-d.glb  character-e.glb  character-f.glb  character-g.glb  character-h.glb  character-i.glb  character-j.glb  character-k.glb  character-l.glb  character-m.glb  character-n.glb  character-o.glb  character-p.glb  character-q.glb  character-r.glb
assets/models/kenney_cube_pets/: Overview.html
assets/models/kenney_cube_pets/glb/: animal-beaver.glb  animal-bee.glb  animal-bunny.glb  animal-cat.glb  animal-caterpillar.glb  animal-chick.glb  animal-cow.glb  animal-crab.glb  animal-deer.glb  animal-dog.glb  animal-elephant.glb  animal-fish.glb  animal-fox.glb  animal-giraffe.glb  animal-hog.glb  animal-koala.glb  animal-lion.glb  animal-monkey.glb  animal-panda.glb  animal-parrot.glb  animal-penguin.glb  animal-pig.glb  animal-polar.glb  animal-tiger.glb
assets/modules/: Aquarium.elf  BatchTest.cs  BunnyMark.cs  BunnyMark.elf  ImGuiDemo.elf  ModelViewer.cs  ModelViewer.elf  Primitives2D.cs  Primitives2D.elf  TerrainDemo.cs  TerrainDemo.elf  WaterPlane.cs  WaterPlaneDemo.cs  WaterPlaneDemo.elf  blank.elf  gridtest.cs  gridtest.elf  lights_script.elf
assets/shaders/custom/: sun.frag  sun.vert  water.frag  water.vert  water_lake.frag  water_lake.vert  water_sea.frag  water_sea.vert
engine/2D/: PrimitiveObject2D.cpp  SceneContainer2D.cpp  SceneContainer2D.h  SceneObject2D.cpp  SceneObject2D.h  SpriteObject.cpp
engine/3D/: ModelObject.cpp  SceneContainer.cpp  SceneContainer.h  SceneObject.cpp  SceneObject.h  TerrainObject.cpp
engine/core/: ElfFluxInit.cpp
engine/grid/: Grid.cpp
engine/gui/: ConsoleGuiObject.cpp  Gui.cpp
engine/test/: BatchRender.cpp  starfield.cpp
lib/dk/: dk_console.h  dk_ui.h
res/: icon_32.xcf
src/: main.cpp  torqueConfig.h
